--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run Tests
-      run: mvnw -B verify -Dspring.profiles.active=ci
+      run: mvn -B verify -Dspring.profiles.active=ci
