--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sonar.projectKey>%JOUW_PROJECT_KEY%</sonar.projectKey>
-        <sonar.organization>%JOUW_ORGANIZATION%</sonar.organization>
+        <sonar.projectKey>JobStoker_cisq1-lingo</sonar.projectKey>
+        <sonar.organization>jobstoker</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.exclusions>**/LingoApplication.java</sonar.exclusions>
     </properties>
